Add a few more tests.

--- a/spring-petclinic-clone-kotlin/src/main/resources/templates/person/createOwner.html
+++ b/spring-petclinic-clone-kotlin/src/main/resources/templates/person/createOwner.html
@@ -27,7 +27,7 @@
             <div>
                 <h3>Add Owner</h3>
             </div>
-            <form method="post" action="/owners/create" enctype="multipart/form-data">
+            <form method="post" action="/owners/create" enctype="application/x-www-form-urlencoded">
                 <div class="form-element">
                     <div class="label">
                         <label for="firstName">First Name</label>
