Add example of PATCH endpoint and a few tests.

--- a/spring-petclinic-clone-kotlin/src/main/resources/templates/visit/create.html
+++ b/spring-petclinic-clone-kotlin/src/main/resources/templates/visit/create.html
@@ -54,7 +54,7 @@
     </div>
     <div>
         <div>
-            <form method="post" action="/visits" enctype="multipart/form-data">
+            <form method="post" action="/visits" enctype="application/x-www-form-urlencoded">
                 <div class="form-element">
                     <div class="label">
                         <label for="ownersList">Select Owner</label>
