--- a/spring-petclinic-clone-kotlin/src/main/resources/templates/person/owner.html
+++ b/spring-petclinic-clone-kotlin/src/main/resources/templates/person/owner.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <title>Pet Clinic Persons</title>
 
-    <link rel="stylesheet" type="text/css" th:href="@{/app.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/styles/app.css}"/>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
     <style>
@@ -33,7 +33,7 @@
         }
 
         function addPet() {
-            const apiURI = `/api/pets`;
+            const apiURI = `/api/v1/pets`;
             const payload = {
                 name: document.getElementById("name").value,
                 type: document.getElementById("type").value,
