--- a/spring-petclinic-clone-kotlin/src/main/resources/templates/person/owners.html
+++ b/spring-petclinic-clone-kotlin/src/main/resources/templates/person/owners.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <title>Pet Clinic Persons</title>
 
-    <link rel="stylesheet" type="text/css" th:href="@{/app.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/styles/app.css}"/>
 
 </head>
 <body>
