--- a/spring-petclinic-clone-kotlin/src/main/resources/templates/visit/create.html
+++ b/spring-petclinic-clone-kotlin/src/main/resources/templates/visit/create.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <title>Pet Clinic Persons</title>
 
-    <link rel="stylesheet" type="text/css" th:href="@{/app.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/styles/app.css}"/>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
     <style>
@@ -17,7 +17,7 @@
         function selectOwner() {
             const ownerId = document.getElementById("ownersList").value;
             axios
-                .get(`/api/owners/${ownerId}/pets`)
+                .get(`/api/v1/owners/${ownerId}/pets`)
                 .then(function (resp) {
                     console.log(resp.data);
                     petsJsonToUIElements(resp.data);
