--- a/spring-petclinic-clone-kotlin/src/main/resources/templates/visit/visit.html
+++ b/spring-petclinic-clone-kotlin/src/main/resources/templates/visit/visit.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <title>Pet Clinic Index</title>
 
-    <link rel="stylesheet" type="text/css" th:href="@{/app.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/styles/app.css}"/>
 </head>
 <body>
 <div class="main-block">
